--- a/index.html
+++ b/index.html
@@ -44,10 +44,8 @@
     <span style = "font-weight: normal;">(Nov 2025 - Present)</span>
     </h4>
   <ul>
-    <li> Evaluated and optimized AI model performance across GPU architectures for inference efficiency.</li>
-<li>Analyzed training metrics and system telemetry to diagnose and resolve computational bottlenecks.</li>
+    <li> Evaluated and optimized AI model performance through data labelling and prompt engineering.</li>
     <li>Collaborated with ML teams to fine-tune LLMs and vision models for production deployment.</li>
-<li>Developed automated dashboards and reports to track model accuracy, latency, and resource utilization.</li>
       </ul>
       <div>
       <h4>
